@@ -6,29 +6,25 @@ import java.util.List;
 
 import com.hbm_m.block.ModBlocks;
 import com.hbm_m.lib.RefStrings;
-import com.hbm_m.recipe.CentrifugeRecipes.RecipeInput;
+import com.hbm_m.recipe.CentrifugeRecipe;
 
-import mezz.jei.api.gui.builder.IRecipeLayoutBuilder;
 import mezz.jei.api.helpers.IGuiHelper;
 import mezz.jei.api.recipe.RecipeType;
 import net.minecraft.network.chat.Component;
 import net.minecraft.world.item.ItemStack;
 
-/**
- * JEI port of {@code CentrifugeRecipeHandler} (extends {@code NEIUniversalHandler}).
- */
 //? if forge {
-public class CentrifugeJeiCategory extends JeiUniversalRecipeCategory<CentrifugeJeiCategory.Recipe> {
+public class CentrifugeJeiCategory extends JeiUniversalRecipeCategory<CentrifugeRecipe> {
 
-    public static final RecipeType<Recipe> RECIPE_TYPE =
-            RecipeType.create(RefStrings.MODID, "centrifuge", Recipe.class);
+    public static final RecipeType<CentrifugeRecipe> RECIPE_TYPE =
+            RecipeType.create(RefStrings.MODID, "centrifuge", CentrifugeRecipe.class);
 
     public CentrifugeJeiCategory(IGuiHelper guiHelper) {
         super(guiHelper, new ItemStack[]{new ItemStack(ModBlocks.CENTRIFUGE.get())});
     }
 
     @Override
-    public RecipeType<Recipe> getRecipeType() {
+    public RecipeType<CentrifugeRecipe> getRecipeType() {
         return RECIPE_TYPE;
     }
 
@@ -38,33 +34,33 @@ public class CentrifugeJeiCategory extends JeiUniversalRecipeCategory<Centrifuge
     }
 
     @Override
-    protected int getInputCount(Recipe recipe) {
+    protected int getInputCount(CentrifugeRecipe recipe) {
         return 1;
     }
 
     @Override
-    protected int getOutputCount(Recipe recipe) {
-        return (int) Arrays.stream(recipe.outputs).filter(stack -> !stack.isEmpty()).count();
+    protected int getOutputCount(CentrifugeRecipe recipe) {
+        return (int) Arrays.stream(recipe.getOutputs())
+                .filter(stack -> stack != null && !stack.isEmpty())
+                .count();
     }
 
     @Override
-    protected List<List<ItemStack>> getInputStacks(Recipe recipe) {
-        return List.of(recipe.input.getDisplayStacks());
+    protected List<List<ItemStack>> getInputStacks(CentrifugeRecipe recipe) {
+        return List.of(Arrays.asList(recipe.getInput().getItems()));
     }
 
     @Override
-    protected List<ItemStack> getOutputStacks(Recipe recipe) {
+    protected List<ItemStack> getOutputStacks(CentrifugeRecipe recipe) {
         List<ItemStack> outputs = new ArrayList<>();
-        for (ItemStack stack : recipe.outputs) {
-            if (!stack.isEmpty()) {
+        for (ItemStack stack : recipe.getOutputs()) {
+            if (stack != null && !stack.isEmpty()) {
                 outputs.add(stack);
             }
         }
         return outputs;
     }
 
-    public record Recipe(RecipeInput input, ItemStack[] outputs) {
-    }
 }
 //?} else {
 /*public final class CentrifugeJeiCategory {
